<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="192dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:contentScrim="?attr/colorPrimary">
            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"

                android:src="@android:drawable/sym_def_app_icon"
                android:scaleType="centerCrop" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.ProfileFragment">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewProfilePhoto"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginStart="50dp"
                            tools:src="@tools:sample/avatars" />

                        <TextView
                            android:id="@+id/textViewName"
                            android:layout_width="0dp"
                            android:layout_marginStart="40dp"
                            android:paddingTop="30dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:text="@string/tv_name" />
                    </LinearLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textViewWorkHours"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_work_hours" />

                            <TextView
                                android:id="@+id/textViewDoneTasks"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_done_tasks" />

                            <TextView
                                android:id="@+id/textViewMemories"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_memories" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textViewCounterWorkHours"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="" />

                            <TextView
                                android:id="@+id/textViewCounterDoneTasks"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="" />

                            <TextView
                                android:id="@+id/textViewCounterMemories"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="" />
                        </TableRow>

                    </TableLayout>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/containect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        android:clickable="true"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textViewSignIn"
                                android:layout_width="0dp"
                                android:layout_marginStart="10dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/tv_sign_in_to_another_account" />

                            <ImageButton
                                android:id="@+id/imageButtonSignIn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:src="@android:drawable/btn_star_big_on" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/contaroject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        android:clickable="true"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textViewEmail"
                                android:layout_marginStart="10dp"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/tv_email" />

                            <ImageButton
                                android:id="@+id/imageButtonEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:src="@android:drawable/btn_star_big_on" />

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/contaject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:clickable="true"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textViewPhone"
                                android:layout_marginStart="10dp"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/tv_phone" />

                            <ImageButton
                                android:id="@+id/imageButtonPhone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:src="@android:drawable/btn_star_big_on" />

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/containeroject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:clickable="true"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textViewLocation"
                                android:layout_marginStart="10dp"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/tv_locations" />

                            <ImageButton
                                android:id="@+id/imageButtonLocation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:src="@android:drawable/btn_star_big_on" />

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:clickable="true"
                        android:focusable="true">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:id="@+id/constraint0"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textViewMemoriesPhoto"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/tv_memories"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageButton
                                android:id="@+id/imageButtonCamera"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:focusable="true"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@android:drawable/ic_menu_camera" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="16dp"
                                app:layout_constraintTop_toBottomOf="@+id/imageButtonCamera" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </ScrollView>

        </FrameLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>